src/objects/TR1__Closing_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>TR1__Account__r.Account_Code_S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Leave_Day_Pay_Rate__c</fullName>
        <label>Annual Leave Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Leave_Entitlement_Formula__c</fullName>
        <description>New Holiday Entitlement field</description>
        <formula>If (text(Booking_Type__c)=&quot;Long Term&quot; &amp;&amp; Qualified_Unqualified__c=&quot;Q&quot;
,65,28)</formula>
        <label>Annual Leave Entitlement Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Leave_Entitlement__c</fullName>
        <defaultValue>&quot;65&quot;</defaultValue>
        <inlineHelpText>The annual leave entitlement of a comparable, permanent, full time employee of the School.</inlineHelpText>
        <label>Comparator Annual Leave Entitlement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Leave_Half_Day_Pay_Rate__c</fullName>
        <label>Annual Leave Half Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Leave_Hour_Pay_Rate__c</fullName>
        <label>Annual Leave Hour Pay Rate</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Any_Other_Renumerations__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Any Other Renumerations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Scheme_Applicable__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <label>Bonus Scheme Applicable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booking Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booking_Day__c</fullName>
        <label>Booking Day&apos;s(ReadOnly)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_End_Time__c</fullName>
        <label>Booking End Time(ReadOnly)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Reason_Vacancy__c</fullName>
        <formula>TEXT (  TR1__Job__r.Booking_Reason__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Reason Vacancy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Reason__c</fullName>
        <label>Booking Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ST (Short Term)</fullName>
                </value>
                <value>
                    <fullName>LT (Long Term)</fullName>
                </value>
                <value>
                    <fullName>LT – Maternity</fullName>
                </value>
                <value>
                    <fullName>LT – Sickness</fullName>
                </value>
                <value>
                    <fullName>LT Unfilled Vacancy</fullName>
                </value>
                <value>
                    <fullName>SEN</fullName>
                </value>
                <value>
                    <fullName>Intervention/INA/LSA</fullName>
                </value>
                <value>
                    <fullName>Support Staff/TA/Unqualified</fullName>
                </value>
                <value>
                    <fullName>Unfilled vacancy</fullName>
                </value>
                <value>
                    <fullName>Trial Day</fullName>
                </value>
                <value>
                    <fullName>Love2Read</fullName>
                </value>
                <value>
                    <fullName>Tuition</fullName>
                </value>
                <value>
                    <fullName>COVID Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Start_Time__c</fullName>
        <label>Booking Start Time(ReadOnly)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <formula>IMAGE( IF( Booking_Confirmed__c  = True , &quot;/servlet/servlet.FileDownload?file=01558000001rMe0&quot;, &quot;/servlet/servlet.FileDownload?file=01558000001rMg6&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                    <default>true</default>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Candidate__c</fullName>
        <formula>TEXT(  TR1__Person_Placed__r.Division__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch (Candidate)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch_New_TR__c</fullName>
        <formula>TEXT(  TR1__Job_Credit__r.Branch__c  
)</formula>
        <label>Branch New TR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <formula>TR1__Job__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCS__c</fullName>
        <description>Defines if the Closing Report is on the CCs Framework. Copies through to the CRS and Timesheet Export Line Items Object</description>
        <inlineHelpText>Select Y if this Booking is on the CCS Framework</inlineHelpText>
        <label>CCS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCS_test__c</fullName>
        <label>CCS test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <default>true</default>
                    <label>Y</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Actual_Margin__c</fullName>
        <formula>((5 *  TR1__Bill_Rate__c) - (CF_Weekly_Pay__c * 0.005) - CF_Pension__c - CF_NICs__c - CF_Weekly_Pay__c) / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Actual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_NICs__c</fullName>
        <formula>(IF(CF_Weekly_Pay__c - 175 &lt; 0, 0, CF_Weekly_Pay__c - 175)) * 0.1505</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF NICs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Pension__c</fullName>
        <formula>(IF(CF_Weekly_Pay__c - 120 &lt; 0, 0, CF_Weekly_Pay__c - 120)) * 0.03</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Pension</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Weekly_Pay__c</fullName>
        <formula>TR1__Pay_Rate__c * 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Weekly Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COVID_19_Booking_Specific_Notes__c</fullName>
        <label>COVID-19 Booking Specific Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_End_Date_max__c</fullName>
        <label>CRS End Date max</label>
        <summarizedField>Closing_Report_Schedule__c.Schedule_Date__c</summarizedField>
        <summaryForeignKey>Closing_Report_Schedule__c.Closing_Report__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CRS_Start_Date_Min__c</fullName>
        <label>CRS Start Date Min</label>
        <summarizedField>Closing_Report_Schedule__c.Schedule_Date__c</summarizedField>
        <summaryForeignKey>Closing_Report_Schedule__c.Closing_Report__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Candidate_Account_Name__c</fullName>
        <formula>TR1__Person_Placed__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Account_Number__c</fullName>
        <formula>TR1__Person_Placed__r.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Compliance_Status__c</fullName>
        <formula>TEXT(TR1__Person_Placed__r.Compliance_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Compliance Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Employee_Status__c</fullName>
        <formula>TEXT ( TR1__Person_Placed__r.Employee_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Gender__c</fullName>
        <formula>TEXT (TR1__Person_Placed__r.Gender__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_NI_Number__c</fullName>
        <formula>TR1__Person_Placed__r.National_Insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate NI Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Pay_Method__c</fullName>
        <formula>TEXT( TR1__Person_Placed__r.Pay_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Pay Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Pay_Type__c</fullName>
        <formula>TEXT( TR1__Person_Placed__r.Tax_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Pay Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Payroll_Number__c</fullName>
        <formula>TR1__Person_Placed__r.Payroll_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Payroll Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Payroll_Type__c</fullName>
        <formula>TEXT ( TR1__Person_Placed__r.Tax_Method__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Payroll Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Sort_Code__c</fullName>
        <formula>TR1__Person_Placed__r.Sort_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Sort Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidates_will_have_received_training__c</fullName>
        <formula>TR1__Timesheet_Approver__r.Is_supply_candidate_receive_training__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidates will/have received training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carried_out_a_COVID_19_Risk_Assessment__c</fullName>
        <formula>TR1__Timesheet_Approver__r.Is_School_carried_COVID19_Risk_asse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carried out a COVID-19 Risk Assessment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Account_Email__c</fullName>
        <description>Email address for umbrella client accounts</description>
        <label>Client Account Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Address__c</fullName>
        <formula>TR1__Account__r.ShippingStreet &amp;&quot;, &quot;&amp;  TR1__Account__r.ShippingCity &amp; &quot;, &quot; &amp; TR1__Account__r.ShippingState &amp; &quot;, &quot; &amp;  TR1__Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Branch__c</fullName>
        <formula>TEXT(TR1__Account__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_Facilities__c</fullName>
        <description>AWR field</description>
        <label>Collective Facilities</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company (e.g. Supply Desk, Qualified Schools or Qualified Teachers) of Closing Report</description>
        <label>Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comparator_Full_Time_Annual_Salary__c</fullName>
        <inlineHelpText>The annual salary that the School would pay a full time, comparable internal employee for doing the same role.</inlineHelpText>
        <label>Comparator Full-Time Annual Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Covid_19_Risk_Assesment_Additional_Notes__c</fullName>
        <formula>TR1__Timesheet_Approver__r.Covid_19_Risk_Assesment_Additional_Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Covid 19 Risk Assesment Additional Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Current_User__c</fullName>
        <formula>$User.Id =  TR1__Job_Credit__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creator_Branch_Phone__c</fullName>
        <formula>TEXT ( CreatedBy.Branch__c ) &amp; BR() 
&amp;(  CreatedBy.Phone  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Branch &amp; Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Date_of_Birth__c</fullName>
        <formula>TR1__Person_Placed__r.Date_of_Birth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_Notes_For_Confirmation_Letter__c</fullName>
        <formula>TR1__Account__r.HS_Notes_For_Confirmation_Letter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HS Notes For Confirmation Letter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Issues2__c</fullName>
        <formula>TEXT ( TR1__Account__r.Health_Safety_Issues__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Health &amp; Safety Issues</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Safety_Issues__c</fullName>
        <label>Health &amp; Safety Issues?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Safety_Notes__c</fullName>
        <label>Health &amp; Safety Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hirer__c</fullName>
        <formula>TR1__Account__r.Hirer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>a) For maintained schools: the school itself
b) For independent schools:  proprietor of the school
c) For academies and free schools: the proprietor/ trust</inlineHelpText>
        <label>Hirer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hiring Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports (Hiring Manager)</relationshipLabel>
        <relationshipName>Closing_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hiring_manger_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Hiring_Manager__r.Email</formula>
        <label>Hiring manger Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAT__c</fullName>
        <description>Interview or trial day?</description>
        <label>IAT</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Trial Day</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Address__c</fullName>
        <formula>( TR1__Account__r.BillingStreet ) &amp; BR()
&amp;( TR1__Account__r.BillingCity ) &amp; BR()
&amp;( TR1__Account__r.BillingState ) &amp; BR()
&amp;( TR1__Account__r.BillingPostalCode ) &amp;BR()
&amp;( TR1__Account__r.BillingCountry )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoiced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoiced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoicing_Period__c</fullName>
        <label>Invoicing Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                    <default>true</default>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>BiWeekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoicing Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Closing Reports (Invoicing Person)</relationshipLabel>
        <relationshipName>Closing_Reports_IP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <formula>TEXT ( TR1__Job__r.Job_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEA__c</fullName>
        <formula>TR1__Job__r.LEA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Charge_Per_Day__c</fullName>
        <description>field for maximum charge per day</description>
        <label>Maximum Charge Per Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Day_Charge_Rate__c</fullName>
        <label>Day Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Day_Pay_Rate__c</fullName>
        <label>Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Half_Day_Charge_Rate__c</fullName>
        <label>Half Day Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Half_Day_Pay_Rate__c</fullName>
        <label>Half Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Hour_Charge_Rate__c</fullName>
        <label>Hour Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Hour_Pay_Rate__c</fullName>
        <label>Hour Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Pay_rate_Per_Day__c</fullName>
        <description>Field for maximum pay rate per day</description>
        <label>Maximum pay rate per day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NTP_Framework_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NTP Framework Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Necessary_Exp__c</fullName>
        <inlineHelpText>This will be added to the Confirmation Letters. Please input: from fields: SEN experience and/or SEN Training &amp; Quals and/or Qualifications and/or Skills, Training, Experience.</inlineHelpText>
        <label>Necessary Exp</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_name__c</fullName>
        <formula>TR1__Job__r.Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Office name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Day_Charge_Rate__c</fullName>
        <label>Old Day Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Day_Pay_Rate__c</fullName>
        <label>Old Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Half_Day_Charge_Rate__c</fullName>
        <label>Old Half Day Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Half_Day_Pay_Rate__c</fullName>
        <label>Old Half Day Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Hour_Charge_Rate__c</fullName>
        <label>Old Hour Charge Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Hour_Pay_Rate__c</fullName>
        <label>Old Hour Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Placement_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Old Placement ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overtime_Rate__c</fullName>
        <defaultValue>&quot;None advised&quot;</defaultValue>
        <inlineHelpText>This will be added to the Confirmation Letters. Please input the rate your would like to have appear on the letter.</inlineHelpText>
        <label>Overtime Payments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paid_in_Interim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid in Interim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Type_1_old__c</fullName>
        <inlineHelpText>100 = Day
101 = Half Day
105 = Hour</inlineHelpText>
        <label>Pay Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>101</fullName>
                </value>
                <value>
                    <fullName>105</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Type__c</fullName>
        <label>Pay Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Placed_email__c</fullName>
        <label>Person Placed email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Person_placed_Mobile__c</fullName>
        <formula>TR1__Person_Placed__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Person placed Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Projected_GP__c</fullName>
        <formula>Maximum_Day_Charge_Rate__c -  Maximum_Day_Pay_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Qualified_UnqualifiedWF__c</fullName>
        <label>Qualified/Unqualified</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualified_Unqualified__c</fullName>
        <formula>CASE(TR1__Job__r.Job_Title__c, &quot;Cover Supervisor&quot;, &quot;U&quot;, &quot;FE Teacher&quot;, &quot;U&quot;, &quot;Instructor&quot;, &quot;U&quot;, &quot;OTT&quot;, &quot;Q&quot;, &quot;Primary Teacher&quot;, &quot;Q&quot;, &quot;Secondary Teacher&quot;, &quot;Q&quot;, &quot;Senior Leader&quot;, &quot;Q&quot;, &quot;TA General&quot;, &quot;U&quot;, &quot;TA Level 3&quot;, &quot;U&quot;, &quot;Teacher&quot;, &quot;Q&quot;, &quot;Tutor&quot;, &quot;U&quot;,
Null)</formula>
        <label>Qualified/Unqualified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rest_Period_Breaks__c</fullName>
        <defaultValue>&quot;Standard&quot;</defaultValue>
        <label>Rest Period/ Breaks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retained_Type__c</fullName>
        <label>Retained Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training Provider Fee Invoice</fullName>
                </value>
                <value>
                    <fullName>School Fee Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Details__c</fullName>
        <inlineHelpText>This will be added to the Confirmation Letters.  Please input:  &apos;Subject&apos; and/or &apos;Year/KS&apos; information.</inlineHelpText>
        <label>Role Details</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Working_Days__c</fullName>
        <defaultValue>195</defaultValue>
        <inlineHelpText>Number of days per academic year, during which the school is open including INSET days</inlineHelpText>
        <label>School Working Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Multiple__c</fullName>
        <inlineHelpText>If Pay and Charge = Full Day/AM/PM, then Enter &quot;1&quot;
If Pay and Charge = Hourly, then Enter the Number of Estimated Hours Per Day, ie &quot;8&quot;</inlineHelpText>
        <label>Shift Multiple</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_LEA__c</fullName>
        <formula>TEXT (TR1__Account__r.LEA_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-LEA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>TEXT(TR1__Job__r.TR1__Regional_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__AGP_Multiplier__c</fullName>
        <label>AGP Multiplier</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Closing_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Billing_Street__c</fullName>
        <label>Additional Billing Street</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Additional_Compensation__c</fullName>
        <label>Additional Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Adjusted_Bill_Rate__c</fullName>
        <formula>TR1__Bill_Rate__c -  TR1__Consu_Administrative_Fee_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>